# clause55-copilot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: generate_sample_pack.sh
src/c55copilot/: __init__.py  analysis.py  config.py
src/c55copilot/api/: main.py  routes.py
src/c55copilot/assets/samples/: massing_single.gltf  massing_two_townhouses.json  property_report_mock.json  site_fitzroy.json
src/c55copilot/assets/templates/: cover.html  report.html  styles.css
src/c55copilot/cli/: __init__.py  main.py
src/c55copilot/domain/: __init__.py  geometry.py  models.py  overshadowing.py  solar.py
src/c55copilot/domain/checks/: __init__.py  clause55.py
src/c55copilot/domain/checks/standards/: __init__.py  b1_site_context.py  b2_neighbourhood.py  b3_solar_daylight.py  b4_amenity_impacts.py  b5_energy_solar.py  utils.py
src/c55copilot/io/: exporters.py  parsers.py  property_data.py
src/c55copilot/rules/: schema.py  victoria_clause55.yaml
src/fastapi/: __init__.py
src/fastapi/middleware/: __init__.py  cors.py
src/fastapi/testclient/: __init__.py
src/pydantic/: __init__.py
tests/: test_api.py  test_checks.py  test_geometry.py  test_overshadowing.py  test_solar.py
webapp/: index.html  package.json
webapp/src/: App.tsx
webapp/src/components/: Figure.tsx  Result.tsx  Upload.tsx
webapp/src/lib/: api.ts
