[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clause55-copilot"
version = "0.1.0"
description = "Clause 55 (ResCode) compliance automation"
authors = [{name = "OpenAI", email = "oss@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "pydantic>=2.5",
    "python-multipart>=0.0.7",
    "shapely>=2.0",
    "pyproj>=3.6",
    "numpy>=1.26",
    "pysolar>=0.11.0",
    "matplotlib>=3.8",
    "weasyprint>=60.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "PyYAML>=6.0",
]

[project.scripts]
c55 = "c55copilot.cli.main:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["c55copilot"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
